--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 <!--            <version>9.0.0</version>-->
 <!--        </dependency>-->
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.113.Final</version> <!-- 使用最新版本 -->
+        </dependency>
+
     </dependencies>
 
     <build>
