--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
             <version>5.2.0</version>  <!-- 请使用最新版本 -->
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.3</version>
+        </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
