--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <version>20210307</version> <!-- 最新版本 -->
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.3-jre</version> </dependency>
+
     </dependencies>
 
     <build>
