--- a/pom.xml
+++ b/pom.xml
@@ -73,10 +73,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.18.3</version>
         </dependency>
+
+
+        <!-- 必须有这个依赖 -->
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
-            <version>3.5.10.1</version>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.5.10.1</version> <!-- 用最新版 -->
         </dependency>
 
 <!--        <dependency>-->
@@ -125,6 +128,13 @@
             <artifactId>guava</artifactId>
             <version>32.1.3-jre</version> </dependency>
 
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
